Moved Service, model, dto to commons-core Created Jooq in program configuration